--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -23,10 +23,14 @@
     <div class="navbar-fixed">
       <nav class="teal accent-4 ">
         <div class="nav-wrapper">
-          <div class="container">
+          <div class="container valign-wrapper">
             <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
-            <a href="/login" class="right waves-effect waves-light btn hide-on-med-and-down ">Log in</a>
-            
+            {% if userLoggedIn %}
+              <i class="material-icons right white">person</i>
+            {% else %}
+              <a href="/login" class="right waves-effect waves-light btn">Log in</a>
+            {% endif %}
+              
           </div>
         </div>
       </nav>
