--- a/triptailor/templates/triptailor/home.html
+++ b/triptailor/templates/triptailor/home.html
@@ -8,19 +8,28 @@
 {% block main %}
     <div class="row">
         <div class="col s12 m4 l3">
-            <div class="card medium ttcards z-depth-3">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <img src="https://goo.gl/mCRd3c" alt="" class="activator"/>
+            
+            {% for trip in searchResults %}
+                <div class="card medium ttcards z-depth-3">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img src="https://goo.gl/mCRd3c" alt="" class="activator"/>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator truncate">Title<i class="material-icons right">more_vert</i></span>
+                        <p class="truncated" >{% trip.details %}</p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title activator">Trip Details<i class="material-icons right">close</i></span>
+                        <iframe src="https://www.google.com/maps/embed/v1/directions
+                        ?key=AIzaSyA1ExTIWTcY3SIuhNXyG4hmw6RT4vwPCbc
+                        &origin=Peter+Kewitt+Institute
+                        &destination=Union+Pacific+Headquarters
+                        &avoid=tolls|highways" frameborder="0"></iframe>
+                    </div>
                 </div>
-                <div class="card-content">
-                    <span class="card-title activator">Title<i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">Link</a></p>
-                </div>
-                <div class="card-reveal">
-                    <span class="card-title activator">Card Title<i class="material-icons right">close</i></span>
-                    <p>Information stuff</p>
-                </div>
-            </div>
+            {% endfor %}
+                
+            
         </div>
  
     </div>
