commit for mitch

--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -23,7 +23,7 @@
     <div class="navbar-fixed">
       <nav class="teal accent-4 ">
         <div class="nav-wrapper">
-          <div class="container valign-wrapper">
+          <div class="container">
             <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
             {% if userLoggedIn %}
               <i class="material-icons right white">person</i>
