--- a/triptailor/templates/triptailor/home.html
+++ b/triptailor/templates/triptailor/home.html
@@ -6,17 +6,16 @@
     
 
 {% block main %}
-    <div class="row">
-        <div class="col s12 m4 l3">
-            
-            {% for trip in searchResults %}
+    <div class="row">            
+        {% for trip in searchResults %}
+            <div class="col s12 m4 l3">
                 <div class="card medium ttcards z-depth-3">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img src="https://goo.gl/mCRd3c" alt="" class="activator"/>
                     </div>
                     <div class="card-content">
                         <span class="card-title activator truncate">Title<i class="material-icons right">more_vert</i></span>
-                        <p class="truncated" >{% trip.details %}</p>
+                        <p class="truncated" >{{ trip.details }}</p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title activator">Trip Details<i class="material-icons right">close</i></span>
@@ -27,10 +26,8 @@
                         &avoid=tolls|highways" frameborder="0"></iframe>
                     </div>
                 </div>
-            {% endfor %}
-                
-            
-        </div>
+            </div>
+        {% endfor %}
  
     </div>
 {% endblock main %}
