--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -23,15 +23,17 @@
     <div class="navbar-fixed">
       <nav class="teal accent-4 ">
         <div class="nav-wrapper">
-          <div class="container">
-            <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
-            {% if userLoggedIn %}
-              <i class="material-icons right white">person</i>
-            {% else %}
-              <a href="/login" class="right waves-effect waves-light btn">Log in</a>
-            {% endif %}
-              
+          <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
+          {% if userLoggedIn %}
+          <div class="profilePic">
+            <img class="" id="profilePicture" src="https://goo.gl/mCRd3c">
           </div>
+          {% else %}
+            <ul class="right">
+              <li><a href="/createuser" class=" waves-effect waves-light btn">New User</a></li>
+              <li><a href="/login" class=" waves-effect waves-light btn">Log in</a></li>     
+            </ul>
+          {% endif %}
         </div>
       </nav>
     </div>
