--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -24,16 +24,18 @@
       <nav class="teal accent-4 ">
         <div class="nav-wrapper">
           <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
-          {% if userLoggedIn %}
-          <div class="profilePic">
-            <img class="" id="profilePicture" src="https://goo.gl/mCRd3c">
-          </div>
+          {% if user.is_authenticated %}
+            <ul class="right">
+              <li>Welcome {{ user.get_username }}!</li>
+              <li><a href="{% url 'logout'%}?next={{request.path}}" class=" waves-effect waves-light btn">Logout</a></li>   
+            </ul>
           {% else %}
             <ul class="right">
               <li><a href="/createuser" class=" waves-effect waves-light btn">New User</a></li>
-              <li><a href="/login" class=" waves-effect waves-light btn">Log in</a></li>     
-            </ul>
-          {% endif %}
+              <li><a href="{% url 'login'%}?next={{request.path}}" class=" waves-effect waves-light btn">Log in</a></li>     
+            </ul>  
+          {% endif %} 
+          
         </div>
       </nav>
     </div>
