add basic functionality with maps api for searching places

--- a/triptailor/static/triptailor/base-template.css
+++ b/triptailor/static/triptailor/base-template.css
@@ -19,3 +19,11 @@ img{
     height:20px;
     width:20px;
 }
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+main {
+    flex: 1 0 auto;
+}
