--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -20,28 +20,47 @@
     
 </head>
 <body>
+  <header>
     <div class="navbar-fixed">
-      <nav class="teal accent-4 ">
-        <div class="nav-wrapper">
-          <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
-          {% if userLoggedIn %}
-          <div class="profilePic">
-            <img class="" id="profilePicture" src="https://goo.gl/mCRd3c">
+        <nav class="teal accent-4 ">
+          <div class="nav-wrapper">
+            <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
+            {% if userLoggedIn %}
+            <div class="profilePic">
+              <img class="" id="profilePicture" src="https://goo.gl/mCRd3c">
+            </div>
+            {% else %}
+              <ul class="right">
+                <li><a href="/createuser" class=" waves-effect waves-light btn">New User</a></li>
+                <li><a href="/login" class=" waves-effect waves-light btn">Log in</a></li>     
+              </ul>
+            {% endif %}
           </div>
-          {% else %}
-            <ul class="right">
-              <li><a href="/createuser" class=" waves-effect waves-light btn">New User</a></li>
-              <li><a href="/login" class=" waves-effect waves-light btn">Log in</a></li>     
-            </ul>
-          {% endif %}
-        </div>
-      </nav>
-    </div>
+        </nav>
+      </div>
+  </header>
+    
         
-
+  <main>
     <div class="container">
         {% block main %}
         {% endblock main %}
     </div>
+  </main>
+   
+  <footer class="page-footer teal accent-4">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m8 l6">
+          <h5 class="white-text center"> - Made with love -</h5>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2018 TripTailor Team / UNO
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
