--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -27,12 +27,12 @@
           {% if user.is_authenticated %}
             <ul class="right">
               <li>Welcome {{ user.get_username }}!</li>
-              <li><a href="{% url 'logout'%}?next={{request.path}}" class=" waves-effect waves-light btn">Logout</a></li>   
+              <li><a href="{% url 'logout'%}" class=" waves-effect waves-light btn">Logout</a></li>   
             </ul>
           {% else %}
             <ul class="right">
-              <li><a href="/createuser" class=" waves-effect waves-light btn">New User</a></li>
-              <li><a href="{% url 'login'%}?next={{request.path}}" class=" waves-effect waves-light btn">Log in</a></li>     
+              <li><a href="{% url 'signup'%}" class=" waves-effect waves-light btn">New User</a></li>
+              <li><a href="{% url 'login'%}" class=" waves-effect waves-light btn">Log in</a></li>     
             </ul>  
           {% endif %} 
           
