added trip creation base, map styling, etc

--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -40,12 +40,10 @@
         </div>
       </nav>
     </div>
-        
+  </header>      
   <main>
-    <div class="container">
-        {% block main %}
-        {% endblock main %}
-    </div>
+    {% block main %}
+    {% endblock main %}
   </main>
    
   <footer class="page-footer teal accent-4">
