--- a/triptailor/templates/triptailor/create-trip.html
+++ b/triptailor/templates/triptailor/create-trip.html
@@ -9,34 +9,33 @@
 
 {% block main %}
     <div class="pac-card" id="pac-card">
-    <div>
-        <h4 id="title" class="teal accent">
-        Search for Tour Spot
-        </h4>
-    </div>
-        <div class="container">
+        <div id="title" class="teal accent">
+            Search for Tour Spot
+        </div>
         <div id="pac-container">
             <input id="pac-input" type="text"
-                placeholder="Enter a location">
-            <button id="addLocation" class="waves-effect waves-light btn">
-            Add
+                placeholder="Enter a location" style="width:87%; height:2em; margin-bottom:2px;margin-top:2px;">
+            <ul id="location-list" class="collection" style="margin-left:15px; margin-right:15px;">
+            </ul>
+            <button id="addLocation" class="waves-effect waves-light btn right" style="margin-bottom:10px;">
+                Add
             </button>
         </div>
-        <div >
-            <ul id="location-list" class="collection">
-            </ul>
-        </div>
     </div>
-    </div>
-    <div id="map"></div>
+    <div id="map" style="height:90vh"></div>
     <div id="infowindow-content">
     <img src="" width="16" height="16" id="place-icon">
     <span id="place-name"  class="title"></span><br>
     <span id="place-address"></span>
     </div>
     <!-- Replace the value of the key parameter with your own API key. -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="{% static 'triptailor/createTrip/maps-api.js' %}"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHOBJ41T5R3_iSS4OqeMylwOr0XK-fr-Y&libraries=places&callback=initMap"
             async defer></script>
+    <script>
+        var el = document.getElementById('location-list');
+        var sortable = Sortable.create(el);
+    </script>
 {% endblock main %}
     
