--- a/triptailor/static/triptailor/createTrip/maps-css.css
+++ b/triptailor/static/triptailor/createTrip/maps-css.css
@@ -28,15 +28,15 @@ html, body {
 }
 
 .pac-card {
-  margin: 10px 10px 0 0;
+  /* margin: 10px 10px 0 0; */
   border-radius: 2px 0 0 2px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  /* box-sizing: border-box;
+  -moz-box-sizing: border-box; */
   outline: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   background-color: #fff;
   font-family: Roboto;
-  width: 25%;
+  /* width: 25%; */
 }
 
 #pac-container {
