Styled search bar and footer

--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -46,19 +46,8 @@
     {% endblock main %}
   </main>
    
-  <footer class="page-footer teal lighten-1">
-    <div class="container">
-      <div class="row">
-        <div class="col s12 m8 l6">
-          <h5 class="white-text center"> - Made with love -</h5>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-        © 2018 TripTailor Team / UNO
-      </div>
-    </div>
+  <footer class="page-footer teal lighten-1" style="text-align: center; padding-bottom: 1%;">
+     © 2018 TripTailor Team / UNO
   </footer>
   
   {% block scripts %}
