--- a/triptailor/templates/triptailor/home.html
+++ b/triptailor/templates/triptailor/home.html
@@ -18,6 +18,7 @@
         $('nav').removeClass('teal darken-1');
         $('nav').addClass("transparent z-depth-0");
         $("#trip_label, #start_date_label, #end_date_label").addClass('black-text');
+        $('.centerSearchBar').addClass('col s12 m6');
+        $('.centerSearchBar').css({"float":"none", "margin":"200px auto","width":"auto","height":"auto"});
     </script>
 {% endblock scripts %}
-    
