--- a/triptailor/templates/triptailor/searchbar-template.html
+++ b/triptailor/templates/triptailor/searchbar-template.html
@@ -8,29 +8,35 @@
 
 {% block main %}
 <div class="container">
-    <div class="row z-depth-3" id="searchBar">
-        <!-- teal lighten-3 z-depth-3 -->
-        <form method="GET" action="{% url 'searchTrip'%}"> 
-            {% csrf_token %}
-            <!-- white-text -->
-            <div class="input-field col s4 m3 offset-m2 l3 offset-l2 ">
-                <input type="text" name="search_criteria" id="search_criteria">
-                <label for="search_criteria" class="" id="trip_label">Search Trips</label>
-            </div> 
-            <div class="input-field col s3 m2 l2">
-                <input id="start_range" name="start_range" type="text" class="datepicker">
-                <label for="start_range" class="" id="start_date_label">Start</label>
-            </div>
-            <div class="input-field col s3 m2 l2">
-                <input id="end_range" name="end_range" type="text" class="datepicker">
-                <label for="end_range" class="" id="end_date_label">End</label>
-            </div>
-            <div class="input-field col s2 m1 l1">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
-            </div>
-        </form>
+    <div class="row">
+        <div class="centerSearchBar">
+            <div class="row z-depth-3" id="searchBar">
+                    <!-- teal lighten-3 z-depth-3 -->
+                    <form method="GET" action="{% url 'searchTrip'%}"> 
+                        {% csrf_token %}
+                        <!-- white-text -->
+                        <div class="input-field col s4 m3 offset-m2 l3 offset-l2 ">
+                            <input type="text" name="search_criteria" id="search_criteria">
+                            <label for="search_criteria" class="" id="trip_label">Search Trips</label>
+                        </div> 
+                        <div class="input-field col s3 m2 l2">
+                            <input id="start_range" name="start_range" type="text" class="datepicker">
+                            <label for="start_range" class="" id="start_date_label">Start</label>
+                        </div>
+                        <div class="input-field col s3 m2 l2">
+                            <input id="end_range" name="end_range" type="text" class="datepicker">
+                            <label for="end_range" class="" id="end_date_label">End</label>
+                        </div>
+                        <div class="input-field col s2 m1 l1">
+                            <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+                        </div>
+                    </form>
+                </div>
+        </div>
+        
     </div>
 </div>
+
 
     {% block belowSearch %}
     {% endblock belowSearch %}
