--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <div class="navbar-fixed">
-      <nav class="">
+      <nav>
         <div class="nav-wrapper">
           <a href="/" class="brand-logo center waves-effect waves-light"><img class="logo" src="{% static 'triptailor/logo.svg' %}" alt=""></a>
           {% if user.is_authenticated %}
@@ -32,10 +32,13 @@
             </ul>
           {% else %}
             <ul class="right">
-              <li><a href="{% url 'signup'%}" class=" waves-effect waves-light btn">New User</a></li>
-              <li><a href="{% url 'login'%}" class=" waves-effect waves-light btn">Log in</a></li>     
+              <li><a href="#" >Become a Tailor</a></li> 
+              <li><a href="{% url 'login'%}" >Log in</a></li>
+              <li><a href="{% url 'login'%}#register" class="teal darken-1">Register</a></li>
+                   
+              
             </ul>  
-          {% endif %} 
+          {$ endif $} 
           
         </div>
       </nav>
