--- a/triptailor/templates/registration/profile.html
+++ b/triptailor/templates/registration/profile.html
@@ -1,2 +1,87 @@
-{% extends 'triptailor/base-template.html' %}
-<p>You are logged in</p>
+{% extends 'triptailor/base-template.html' %} {% block header %} {% endblock header %} {% block main %}
+<style>
+    .cards-container .card {
+        column-break-inside: avoid;
+        display: inline-block;
+        overflow: visible;
+
+    }
+</style>
+<div class="row">
+    <div class="row col s12 s8 offset-s1">
+
+        <div class="col s12 m4 l3">
+            <div class="card" style="margin-top: 10%;">
+                <div class="card-image">
+                    <img src="https://fourstateheroes.com/assets/heroes/placeholder-profile.png" alt="" class="img-circle img-fluid">
+                </div>
+                <div class="card-content">
+                    <h5>@{{ user.username}}</h5>
+                    <p>{{ user.first_name }} {{ user.last_name }}</p>
+
+                    <ul class="flex-menu">
+                        <li>
+                            <strong>3</strong> active trips</li>
+                        <li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="col s12 m8 l9">
+            <h4>Your Trips</h4>
+            <div class="col s12 m7">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="https://www.healthline.com/hlcmsresource/images/News/public-policy/1105-Does_Mexico_Have_Better_Healthcare_Than_the_United_States-1296x728-header.jpg">
+                        <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                            I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m7">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="https://mw2.google.com/mw-panoramio/photos/medium/19314033.jpg">
+                        <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                            I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m7">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="http://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/1480528206/sandals-emerald-bay-exumas-INBAHAMAS1129.jpg">
+                        <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                            I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    </div>
+</roq>
+
+{% endblock main %}
